Improve form, fix typo, add comments, clean up pom.xml
Improve form for addasset and addborrowhistory: now user can not only see in droplist the room's number but also if it's a storage for clarity.
Change storehouse to a storage in ERoomType enum class.
Add various comments from project copy that were removed beforehand.
Delete commented dependencies in pom.xml file.

--- a/src/main/resources/templates/addasset.html
+++ b/src/main/resources/templates/addasset.html
@@ -64,7 +64,7 @@
 						<label for="room">Numer pokoju: </label>
 						<select class="custom-select" id="room" name="room" required>
 							<option value="" selected>Wybierz pokój...</option>
-							<option th:each="room : ${rooms}" th:value="${room.id}" th:text="${'Pokój nr. ' + room.number}"></option>
+							<option th:each="room : ${rooms}" th:value="${room.id}" th:text="${room.getType() == 'STORAGE'} ? ${'Pokój nr. ' + room.number} + ' - Magazyn' : ${'Pokój nr. ' + room.number} "></option>
 						</select>
 	  				</div>
   				</div>
