Add integrity validation, change localDate to LocalDateTime, reduce comments
Add nullable=false to @JoinColumn annotations.
Delete old comments and update few specific ones.
Change LocalDate to LocalDateTime. Change purchaseDate, warrantyDate, disposalDate variables in AssetHistory.class and borrowDate, borrowUntil, returnBackDate in BorrowHistory.class.
Change DateTimeFormatter in Utils.class. Use ISO 8601 standard for date-time formats.
Update AssetController, BorrowHistoryController and AssetService due to LocalDateTime change above.
Update initial data stored in Starter.class.
Delete redundant dateConventer(LocalDateTime date) method.
Change input type from date to datetime-local in addborrowhistory.html.
Fix updateAsset method in AssetController. Change DATE to DATE_TIME in adnotations and save edited hardwaretype variable from form.
In application.properties add spring.mvc.format.date-time=iso and delete spring.mvc.format.date property.
Add new dependency thymeleaf-extras-java8time.
Add ThymeleafConfiguration.class to be able to format LocalDateTime variables in Thymeleaf templates.

--- a/src/main/resources/templates/addasset.html
+++ b/src/main/resources/templates/addasset.html
@@ -72,11 +72,11 @@
 				<div class="form-row">
 					<div class="form-group col-sm-5">
 						<label for="purchaseDate">Data zakupu: </label>
-	  					<input class="form-control" type="date" id="purchaseDate" name="purchaseDate" th:field="*{assetHistory.purchaseDate}" required>
+	  					<input class="form-control" type="datetime-local" id="purchaseDate" name="purchaseDate" th:field="*{assetHistory.purchaseDate}" required>
 	  				</div>
 	  				<div class="form-group col-sm-5">
 						<label for="warrantyDate">*Data gwarancji: </label>
-	  					<input class="form-control" type="date" id="warrantyDate" name="warrantyDate" th:field="*{assetHistory.warrantyDate}">
+	  					<input class="form-control" type="datetime-local" id="warrantyDate" name="warrantyDate" th:field="*{assetHistory.warrantyDate}">
 	  				</div>
   				</div>
   				<br>
