--- a/src/main/resources/templates/addborrowhistory.html
+++ b/src/main/resources/templates/addborrowhistory.html
@@ -64,7 +64,7 @@
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label" for="warrantyDate">*Data zwrotu: </label>
 					<div class="col-sm-8">
-	  					<input class="form-control" type="date" id="borrowUntil" name="borrowUntil" th:field="*{borrowUntil}">
+	  					<input class="form-control" type="datetime-local" id="borrowUntil" name="borrowUntil" th:field="*{borrowUntil}">
 	  					<small class="form-text text-muted">Data do której sprzęt powinien zostać zwrócony. Data zwrotu jest nieobowiązkowa. Sprzęt powinien zostać zwrócony, gdy pracownik odchodzi z pracy.</small>					
   					</div>
   				</div>
