Fix saving BorrowHistory.desc field, fix saving instead of updating BorrowHistory object, refactor BorrowHistoryController.lendSomeoneAsset method, format borrowUntil date in borrowHistoryOfAsset.html
Fix issue with not saving a comment while lending someone an asset.
Fix issue where borrowing asset and then returning asset creates new record instead of updating the old one.
Refactor lendSomeoneAsset method in BorrowHistoryController class.
Format borrowUntil date to match the borrowDate column in borrowHistoryOfAsset.html.

--- a/src/main/resources/templates/borrowhistoryofasset.html
+++ b/src/main/resources/templates/borrowhistoryofasset.html
@@ -30,6 +30,7 @@
 						<td scope="col">Nr. pokoju</td>
 						<td scope="col">Data wypożyczenia</td>
 						<td scope="col">Data do której należy oddać sprzęt</td>
+						<td scope="col">Oddany</td>
 						<td scope="col">Opis</td>
 					</tr>
 				</thead>
@@ -38,7 +39,8 @@
 						<td th:text="${bh.person.name} + ' ' + ${bh.person.surname}"></td>
 						<td th:text="${bh.room.number}"></td>
 						<td th:text="${#temporals.format(bh.borrowDate)}"></td>
-						<td th:text="${bh.borrowUntil}"></td>
+						<td th:text="${#temporals.format(bh.borrowUntil)}"></td>
+						<td th:text="${#temporals.format(bh.returnBackDate)} ?: 'Nie'"></td>
 						<td th:text="${bh.desc}"></td>
 					</tr>
 				</tbody>
