--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -44,6 +44,9 @@ body > * {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	flex-grow: 1;
+	/*flexbox for pagination*/
+	display: flex;
+	flex-direction: column;
 	
 	/*darken image*/
 	background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), 
@@ -62,6 +65,10 @@ body > * {
 	
 	background-color: rgba(255, 255, 255, 0.3);
 	padding-bottom: 6px;
+}
+
+#pagination{
+	margin-top: auto;
 }
 
 #footer{
